--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,9 @@
     "normalize-css": "^4.2.0",
     "fastclick": "^1.0.6"
   },
-  "title": "smarter-module-boilerplate"
+  "title": "smarter-module-boilerplate",
+  "dependecdncies": {
+    "normalize-css": "^4.2.0",
+    "fastclick": "^1.0.6"
+  }
 }
