--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "normalize-css": "^4.2.0",
     "fastclick": "^1.0.6"
   },
-  "title": "smarter-module-boilerplate",
+  "title": "Smarter Module Boilerplate",
   "dependecdncies": {
     "normalize-css": "^4.2.0",
     "fastclick": "^1.0.6"
